Fix vertical alignment post rebase.

--- a/packages/dataviews/src/style.scss
+++ b/packages/dataviews/src/style.scss
@@ -18,6 +18,10 @@
 	}
 }
 
+.dataviews__filters-view-actions.components-h-stack{
+	align-items: center;
+} 
+
 .dataviews-filters-button {
 	position: relative;
 }
